testdata/EtaX/EtaX.meth/EtaX.meth.07.check
// src:   val t3f: Any       = meth() _               // error: _ must follow method
// 2.13-base error
target/testdata/EtaX/EtaX.meth.07.scala:19: error: _ must follow method; cannot follow String
  val t3f: Any       = meth() _               // error: _ must follow method
                           ^
1 error

// 2.13-head error <no change>
// 2.13-new  error <no change>
// 3.0-old   warn
-- [E099] Syntax Migration Warning: target/testdata/EtaX/EtaX.meth.07.scala:19:30 
19 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found

// 3.0       error
-- [E099] Syntax Error: target/testdata/EtaX/EtaX.meth.07.scala:19:30 ----------
19 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found

// 3.1-migr  warn
-- [E099] Syntax Migration Warning: target/testdata/EtaX/EtaX.meth.07.scala:19:30 
19 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found

// 3.1       error
-- [E099] Syntax Error: target/testdata/EtaX/EtaX.meth.07.scala:19:30 ----------
19 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found


error error error warn  error warn  error
